exports[`Components Form/Button Renders a button with different styling when type is submit 1`] = `
<button
  className="Form-Button Form-Button--isPrimary"
  disabled={false}
  onClick={[Function]}>
  Stuff
</button>
`;

exports[`Components Form/Button Renders a default button 1`] = `
<button
  className="Form-Button"
  disabled={false}
  onClick={[Function]}>
  Stuff
</button>
`;
